# PipelinesStudy

./: Dockerfile  README.md  docker-compose.yaml  execute_pipelines.sh  pyproject.toml  run_dagster_assets.sh  run_dagster_job.sh  run_prefect.sh
.github/workflows/: push.yml
data/: heart.csv  o2Saturation.csv
example_pipeline/: norm.csv  pipeline.py  test_database.db
pipelines/: db_utils.py  tasks.py
test_poetry/click/: list.py
test_poetry/dagster_project/: try_assets_merging.py  try_op_job.py
test_poetry/dagster_project/tmp_ok2i4us/history/: runs.db
test_poetry/dagster_project/tmp_ok2i4us/history/runs/: index.db
test_poetry/dagster_project/tmp_ok2i4us/schedules/: schedules.db
test_poetry/prefect_project/: try_flow.py
tests/: test_data.csv  test_tasks.py
